# pixel-rs

./: Cargo.toml  README.md  todo.md
src/: app.rs  ball.rs  brick.rs  game.rs  main.rs  shader.wgsl  storage.rs
src/app/: render_plugin.rs  shader.wgsl  window_plugin.rs
src/ecs/: archetype.rs  bitset.rs  component.rs  component_set.rs  entity.rs  event_bus.rs  mod.rs  singletons.rs  world.rs
src/game/: building_mesh.rs  building_shader.wgsl  camera_controller.rs  ground.rs  mod.rs  road.rs  road_placer.rs
src/game/core/: event_bus.rs  level_manager.rs  mod.rs
src/game/resources/: building_descriptor.rs  level_descriptors.rs  mod.rs  neighborhood_effect.rs  resource_stack.rs
src/math/: color.rs  honeycomb.rs  is_zero.rs  mod.rs  rect.rs  transform2d.rs  vector2.rs
src/plugins/: mod.rs  render_plugin.rs  triangle_plugin.rs  window_plugin.rs
src/plugins/asset_types/: image.rs
src/plugins/core/: asset_storage.rs  camera_plugin.rs  input_plugin.rs  mod.rs  render_plugin.rs  timer_plugin.rs  window_plugin.rs
src/plugins/core/input/: input_plugin.rs  keycode.rs  mod.rs
src/plugins/core/window/: mod.rs  window_plugin.rs
src/plugins/other/: mod.rs  tweener.rs
src/plugins/renderer_plugins/: draw.rs  mesh.rs  mod.rs  multi_instance_mesh.wgsl  multi_instance_mesh_renderer.rs  shader.wgsl  sprite_renderer.rs  sprite_shader.wgsl  texture.rs  tilemap_renderer.rs  tilemap_shader.wgsl  vertex.rs
